--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,6 @@ steps:
         curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
         dep ensure
     fi
-    go build -v .
+    make
   workingDirectory: '$(modulePath)'
   displayName: 'Get dependencies, then build'
